try to make sure colour overlay is not covering main in mobile

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ body {
   background: var(--Snow);
 }
 
+main {
+  z-index: 1;
+}
+
 /* ============
 header/nav
 ============= */
@@ -31,7 +35,7 @@ header {
   background-repeat: no-repeat;
   background-position-x: 50%;
   background-position-y: 50%;
-  background-size: 375px 300px;
+  background-size: 100%;
   height: 300px;
   filter: contrast(130%);
   z-index: -2;
